--- a/datatags-app/app/views/comps/valueAtom.scala.html
+++ b/datatags-app/app/views/comps/valueAtom.scala.html
@@ -7,6 +7,6 @@
      title="@value.getName" data-html="true" data-content="@loc.flatMap(l=>Helpers.o2o(l.getSlotValueText(value))).map( Helpers.renderMinimalMarkdown _ ).getOrElse(Html(value.getNote))"
      data-placement="top">
     @value.getName
-    <span class="glyphicon glyphicon-info-sign"></span>
+    <i class="fa fa-info-circle"></i>
   </span>
 }
