--- a/datatags-app/app/views/comps/answerHistory.scala.html
+++ b/datatags-app/app/views/comps/answerHistory.scala.html
@@ -12,7 +12,7 @@
                         </div>
                         <div class="ar-controls">
                             <span class="badge">@loc.map( l=>l.localizeAnswer(ar._1.answer.getAnswerText)).getOrElse(Helpers.makeUpper(ar._1.answer.getAnswerText))</span>
-                            <button class="btn btn-primary"
+                            <button class="btn btn-outline-info btn-sm"
                                 data-toggle="tooltip" data-placement="top"
                                 title="Change your answer to this question"
                                 onClick="$('#revisitIdx')[0].value='@ar._2'; $('#answerHistory').submit();">
