--- a/datatags-app/app/views/comps/questionPanel.scala.html
+++ b/datatags-app/app/views/comps/questionPanel.scala.html
@@ -1,41 +1,33 @@
 @import edu.harvard.iq.datatags.externaltexts.Localization
 @import edu.harvard.iq.datatags.model.graphs.nodes.AskNode
 @(questionNode:AskNode, pmvKit:PolicyModelVersionKit, loc:Option[Localization],
-        answerHistory:Seq[AnswerRecord], enableComments:Boolean, interactive:Boolean)
-<div class="card">
-  <div class="card-header">
-    <h3 class="card-title clearfix">
-      @if( enableComments ) {
-        <div class="float-right">
-        @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, None, "node", questionNode.getId)
-        </div>}
+        answerHistory:Seq[AnswerRecord], enableComments:Boolean, interactive:Boolean, showId:Boolean)
+
+<div class="card m-2 border-secondary">
+  <div class="card-header bg-secondary text-white d-flex">
+    <div class="flex-grow-1">
       Question: Please select one answer
-    </h3>
-  </div>
-  <div class="card-body">
-    @defining( loc.map(l=>l.getNodeText(questionNode.getId)).getOrElse(java.util.Optional.empty) ){ nodeTextOpt =>
-      @if( nodeTextOpt.isPresent ) {
-        @Helpers.renderMarkdown( nodeTextOpt.get )
-      }else{
-        <span class="questionText">
-          @Helpers.bulletPoint(questionNode.getText)
-        </span>
-        @if( ! questionNode.getTermNames.isEmpty() ) {
-          <h4 class="text-muted">Terms</h4>
-          <dl>
-          @for( termName <- questionNode.getTermNames ) {
-            <dt>@termName</dt>
-            <dl>@Helpers.bulletPoint(questionNode.getTermText(termName))</dl>
-          }
-          </dl>
-        }
-      }
+    </div>
+    @if( showId ){
+      <div><span class="badge badge-light">@questionNode.getId</span></div>
+    }
+    @if( enableComments ){
+      <div>
+      @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, None, "node", questionNode.getId)
+      </div>
     }
   </div>
-  <div class="card-footer">
+  <div class="card-body">
+    @defining( loc.map(_.getNodeText(questionNode.getId))
+                  .flatMap(jop=>if(jop.isPresent) Some(jop.get) else None)
+                  .getOrElse(Helpers.askNodeToMarkdown(questionNode))){ nodeText =>
+      @Helpers.renderMarkdown( nodeText )
+    }
+  </div>
+  <div class="card-footer text-center">
   @helper.form( action=routes.InterviewCtrl.answer(pmvKit.id.modelId, pmvKit.id.version, questionNode.getId), 'id->"answerForm" ) {
     @for( ans <- questionNode.getAnswers ) {
-      <button type="button" class="btn btn-secondary" @if(interactive){
+      <button type="button" class="btn btn-primary" @if(interactive){
       onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();"}else{disabled} >
       @loc.map( l=>l.localizeAnswer(ans.getAnswerText)).getOrElse(Helpers.makeUpper(ans.getAnswerText))</button>
     }
