--- a/datatags-app/app/views/comps/rejectPanel.scala.html
+++ b/datatags-app/app/views/comps/rejectPanel.scala.html
@@ -4,15 +4,17 @@
 @(node:RejectNode, pmvKit:PolicyModelVersionKit, loc:Option[Localization],
         answerHistory:Seq[AnswerRecord], enableComments:Boolean)
 <div class="card">
-  <div class="card-header">
-    <h3 class="card-title clearfix">
-      @if( enableComments ) {
-        <div class="float-right">
-        @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, loc.map(_.getLanguage), "node", node.getId)
-        </div>}
-      Rejection</h3>
+  <div class="card-header bg-danger text-white d-flex">
+    <div class="flex-grow-1">
+      Rejection
+    </div>
+    @if( enableComments ){
+      <div>
+      @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, loc.map(_.getLanguage), "node", node.getId)
+      </div>
+    }
   </div>
   <div class="card-body">
-  @loc.flatMap( l=>o2o(l.getNodeText(node.getId)).map(renderMarkdown) ).getOrElse( Html(node.getReason))
+     @loc.flatMap( l=>o2o(l.getNodeText(node.getId)).map(renderMarkdown) ).getOrElse( Html(node.getReason))
   </div>
 </div>
