--- a/datatags-app/app/views/interview/allQuestions.scala.html
+++ b/datatags-app/app/views/interview/allQuestions.scala.html
@@ -15,8 +15,7 @@ loc:Option[Localization]
 
 @visitAskNode( nd:AskNode, baseLevel:Boolean, visited:Set[String] ) = {
   <div class="question">
-    <a name="@nd.getId"><code>@nd.getId</code></a>
-    @comps.questionPanel(nd, pmvKit, loc, Seq(), false, false)
+    @comps.questionPanel(nd, pmvKit, loc, Seq(), false, false, showId = true)
 
     @for( a <- nd.getAnswers ) {
       @visitNode( nd.getNodeFor(a), baseLevel, visited )
